--- a/notebooks/1_ETL_data_preparation.ipynb
+++ b/notebooks/1_ETL_data_preparation.ipynb
@@ -1298,57 +1298,68 @@
    },
    "cell_type": "code",
    "source": [
-    "# 🏗️ ÉTAPE 13 — Préparation du dataset pour l'entraînement ML\n",
-    "# Objectif :\n",
-    "# 1. Split du dataset harmonisé (train / val / test)\n",
-    "# 2. Copie des images dans une arborescence compatible ML\n",
-    "\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import shutil\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# 1️⃣ Charger le CSV harmonisé\n",
-    "csv_harmonized = \"../data/metadata/dataset_index_openanimaltracks_FR.csv\"\n",
-    "df = pd.read_csv(csv_harmonized, sep=';')\n",
+    "# 📁 Chemins\n",
+    "CSV_PATH = Path(\"../data/metadata/dataset_index_openanimaltracks_FR.csv\")\n",
+    "OUTPUT_DIR = Path(\"../data/processed/OpenAnimalTracks_split\")\n",
     "\n",
-    "print(f\"✅ Dataset chargé avec {len(df)} images harmonisées\")\n",
+    "# 📊 Ratios\n",
+    "TRAIN_RATIO = 0.7\n",
+    "VAL_RATIO = 0.2\n",
+    "TEST_RATIO = 0.1\n",
     "\n",
-    "# 2️⃣ Définir les proportions\n",
-    "train_ratio = 0.7\n",
-    "val_ratio = 0.2\n",
-    "test_ratio = 0.1\n",
+    "def prepare_dataset_splits():\n",
+    "    # ✅ Chargement du dataset\n",
+    "    df = pd.read_csv(CSV_PATH, sep=';')\n",
+    "    print(f\"✅ Dataset chargé avec {len(df)} images harmonisées\")\n",
     "\n",
-    "# 3️⃣ Créer les splits par espèce\n",
-    "splits = []\n",
-    "for species, group in df.groupby(\"espece_fr\"):\n",
-    "    train, temp = train_test_split(group, train_size=train_ratio, random_state=42)\n",
-    "    val, test = train_test_split(temp, test_size=test_ratio / (test_ratio + val_ratio), random_state=42)\n",
+    "    # 🎯 Split par classe\n",
+    "    splits = []\n",
+    "    for espece, group in df.groupby(\"espece_fr\"):\n",
+    "        train, temp = train_test_split(group, train_size=TRAIN_RATIO, random_state=42)\n",
+    "        val, test = train_test_split(temp, test_size=TEST_RATIO / (VAL_RATIO + TEST_RATIO), random_state=42)\n",
     "\n",
-    "    train['split'] = 'train'\n",
-    "    val['split'] = 'val'\n",
-    "    test['split'] = 'test'\n",
+    "        train['split'] = 'train'\n",
+    "        val['split'] = 'val'\n",
+    "        test['split'] = 'test'\n",
     "\n",
-    "    splits.append(pd.concat([train, val, test]))\n",
+    "        splits.append(pd.concat([train, val, test]))\n",
     "\n",
-    "df_split = pd.concat(splits)\n",
-    "print(\"📊 Répartition finale :\")\n",
-    "print(df_split['split'].value_counts())\n",
+    "    df_split = pd.concat(splits)\n",
+    "    print(\"\\n📊 Répartition finale :\")\n",
+    "    print(df_split['split'].value_counts())\n",
     "\n",
-    "# 4️⃣ Créer la structure de sortie\n",
-    "output_dir = Path(\"../data/processed/OpenAnimalTracks_split\")\n",
-    "for split in ['train', 'val', 'test']:\n",
-    "    for species in df['espece_fr'].unique():\n",
-    "        Path(output_dir / split / species).mkdir(parents=True, exist_ok=True)\n",
+    "    return df_split\n",
     "\n",
-    "# 5️⃣ Copier les fichiers\n",
-    "for _, row in df_split.iterrows():\n",
-    "    src = Path(row['filepath'])\n",
-    "    dst = output_dir / row['split'] / row['espece_fr'] / src.name\n",
-    "    if not dst.exists():  # Évite de copier si déjà fait\n",
-    "        shutil.copy(src, dst)\n",
+    "def create_output_structure(output_dir, species_list):\n",
+    "    for split in ['train', 'val', 'test']:\n",
+    "        for species in species_list:\n",
+    "            dir_path = output_dir / split / species\n",
+    "            dir_path.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "print(\"✅ Dataset ML prêt dans :\", output_dir)"
+    "def copy_images(df_split, output_dir):\n",
+    "    for _, row in df_split.iterrows():\n",
+    "        src = Path(row['filepath'])\n",
+    "        dst = output_dir / row['split'] / row['espece_fr'] / src.name\n",
+    "\n",
+    "        if not dst.exists():\n",
+    "            shutil.copy(src, dst)\n",
+    "\n",
+    "def main():\n",
+    "    df_split = prepare_dataset_splits()\n",
+    "    species_list = df_split['espece_fr'].unique()\n",
+    "\n",
+    "    create_output_structure(OUTPUT_DIR, species_list)\n",
+    "    copy_images(df_split, OUTPUT_DIR)\n",
+    "\n",
+    "    print(\"\\n✅ Dataset ML prêt dans :\", OUTPUT_DIR)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ],
    "id": "24ff6db19c9f00c4",
    "outputs": [
@@ -1368,110 +1379,6 @@
     }
    ],
    "execution_count": 50
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "🤖 ÉTAPE 14 — Chargement du dataset pour l’entraînement ML\n",
-    "\n",
-    "Objectifs :\n",
-    "\t1.\tCharger automatiquement les images dans TensorFlow (ou PyTorch si tu préfères).\n",
-    "\t2.\tAppliquer un prétraitement (redimensionnement, normalisation).\n",
-    "\t3.\tGénérer des DataLoaders / tf.data.Dataset pour train / val / test."
-   ],
-   "id": "7bc8ab6c33e602f7"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-04T10:20:30.807339Z",
-     "start_time": "2025-08-04T10:20:27.158133Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# 🤖 ÉTAPE 14 — Chargement automatique du dataset ML\n",
-    "# Objectifs :\n",
-    "# 1. Créer des DataLoaders pour train / val / test\n",
-    "# 2. Prétraiter les images : redimensionnement, normalisation\n",
-    "# 3. Préparer le pipeline pour l'entraînement du modèle\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "from pathlib import Path\n",
-    "\n",
-    "# 1️⃣ Chemin du dataset ML (celui généré à l'étape 13)\n",
-    "dataset_dir = Path(\"../data/processed/OpenAnimalTracks_split\")\n",
-    "\n",
-    "img_size = (128, 128)  # Redimension pour le modèle\n",
-    "batch_size = 32\n",
-    "\n",
-    "# 2️⃣ Création des datasets TensorFlow\n",
-    "train_ds = tf.keras.preprocessing.image_dataset_from_directory(\n",
-    "    dataset_dir / \"train\",\n",
-    "    image_size=img_size,\n",
-    "    batch_size=batch_size\n",
-    ")\n",
-    "val_ds = tf.keras.preprocessing.image_dataset_from_directory(\n",
-    "    dataset_dir / \"val\",\n",
-    "    image_size=img_size,\n",
-    "    batch_size=batch_size\n",
-    ")\n",
-    "test_ds = tf.keras.preprocessing.image_dataset_from_directory(\n",
-    "    dataset_dir / \"test\",\n",
-    "    image_size=img_size,\n",
-    "    batch_size=batch_size\n",
-    ")\n",
-    "\n",
-    "# 3️⃣ Normalisation des pixels [0,1]\n",
-    "normalization_layer = tf.keras.layers.Rescaling(1. / 255)\n",
-    "train_ds = train_ds.map(lambda x, y: (normalization_layer(x), y))\n",
-    "val_ds = val_ds.map(lambda x, y: (normalization_layer(x), y))\n",
-    "test_ds = test_ds.map(lambda x, y: (normalization_layer(x), y))\n",
-    "\n",
-    "# 4️⃣ Préchargement pour accélérer l'entraînement\n",
-    "AUTOTUNE = tf.data.AUTOTUNE\n",
-    "train_ds = train_ds.cache().shuffle(1000).prefetch(buffer_size=AUTOTUNE)\n",
-    "val_ds = val_ds.cache().prefetch(buffer_size=AUTOTUNE)\n",
-    "test_ds = test_ds.cache().prefetch(buffer_size=AUTOTUNE)\n",
-    "\n",
-    "print(\"✅ Datasets TensorFlow prêts pour l'entraînement !\")\n",
-    "print(\"Nombre de classes :\", len(train_ds.class_names))\n",
-    "print(\"Classes :\", train_ds.class_names)"
-   ],
-   "id": "b3e49f59942cecf6",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/louisgardet/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 1719 files belonging to 18 classes.\n",
-      "Found 493 files belonging to 18 classes.\n",
-      "Found 257 files belonging to 18 classes.\n",
-      "✅ Datasets TensorFlow prêts pour l'entraînement !\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'_PrefetchDataset' object has no attribute 'class_names'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[51], line 46\u001B[0m\n\u001B[1;32m     43\u001B[0m test_ds \u001B[38;5;241m=\u001B[39m test_ds\u001B[38;5;241m.\u001B[39mcache()\u001B[38;5;241m.\u001B[39mprefetch(buffer_size\u001B[38;5;241m=\u001B[39mAUTOTUNE)\n\u001B[1;32m     45\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m✅ Datasets TensorFlow prêts pour l\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mentraînement !\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 46\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNombre de classes :\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;28mlen\u001B[39m(\u001B[43mtrain_ds\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mclass_names\u001B[49m))\n\u001B[1;32m     47\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mClasses :\u001B[39m\u001B[38;5;124m\"\u001B[39m, train_ds\u001B[38;5;241m.\u001B[39mclass_names)\n",
-      "\u001B[0;31mAttributeError\u001B[0m: '_PrefetchDataset' object has no attribute 'class_names'"
-     ]
-    }
-   ],
-   "execution_count": 51
   }
  ],
  "metadata": {
